--- a/package.json
+++ b/package.json
@@ -1,17 +1,32 @@
 {
-  "name": "web3-backend",
+  "name": "wallet",
   "version": "1.0.0",
-  "description": "",
+  "description": "This project is for a wallet test",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon server.js"
+    "start": "cross-env NODE_ENV=development node server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "nodemon": "^2.0.21",
-    "web3": "^1.9.0"
+    "body-parser": "^1.19.0",
+    "composable-middleware": "^0.3.0",
+    "cors": "^2.8.5",
+    "cron": "^1.8.2",
+    "cross-env": "^6.0.3",
+    "crypto": "^1.0.1",
+    "dotenv": "^8.2.0",
+    "ethereumjs-util": "^7.1.5",
+    "express": "^4.17.1",
+    "http": "0.0.0",
+    "lodash": "^4.17.15",
+    "moment": "^2.27.0",
+    "mongoose": "^5.7.4",
+    "morgan": "^1.10.0",
+    "npm": "^6.14.5",
+    "path": "^0.12.7",
+    "sharp": "^0.31.3",
+    "web3": "^1.8.2"
   }
 }
